--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
             <img src="images/rafi.jpg" alt="rafi's pic here">
         </div>
     </section>
+    <section class="second-section">
+        <h1>Here is My Mission topics -2024</h1>
+        <div class="image-width">
+            <div id="image-one" class="image-customize">
+                <img src="images/illustrator-1.png" alt="image-1">
+                <h3>Milestone-1</h3>
+                <p>an important event in the development or history of something or in someone’s life: We’ve been
+                    married now for 20 years, a real milestone.</p>
+            </div>
+            <div id="image-two" class="image-customize">
+                <img src="images/illustrator-2.png" alt="image-2">
+                <h3>Milestone-2</h3>
+                <p>an important event in the development or history of something or in someone’s life: We’ve been
+                    married now for 20 years, a real milestone.</p>
+            </div>
+            <div id="image-three" class="image-customize">
+                <img src="images/illustrator-3.png" alt="image-3">
+                <h3>Milestone-3</h3>
+                <p>an important event in the development or history of something or in someone’s life: We’ve been
+                    married now for 20 years, a real milestone.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
