--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
             </div>
         </div>
     </section>
+    <section class="third-section">
+        <div class="first-side">
+            <img src="images/rafi2.jpg" alt="pics are here">
+        </div>
+        <div class="second-side">
+            <h1>Design' are Here</h1>
+            <p>“The moment we cease to hold each other, the moment we break faith with one another, the sea engulfs us
+                and the light goes out.”“The moment we cease to hold each other, the moment we break faith with one
+                another, the sea engulfs us
+                and the light goes out.”</p>
+            <a class="link-button" target="_blank"
+                href="https://www.youtube.com/watch?v=W31LlujrB08&list=RDMMW31LlujrB08&start_radio=1">Read here more</a>
+        </div>
+    </section>
 </body>
 
 </html>
