--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
                 href="https://www.youtube.com/watch?v=W31LlujrB08&list=RDMMW31LlujrB08&start_radio=1">Read here more</a>
         </div>
     </section>
+    <section class="forth-secton">
+        <div class="forth-side">
+            <h1>Design' are Here</h1>
+            <p>“The moment we cease to hold each other, the moment we break faith with one another, the sea engulfs us
+                and the light goes out.”“The moment we cease to hold each other, the moment we break faith with one
+                another, the sea engulfs us
+                and the light goes out.”</p>
+            <a class="link-button" target="_blank"
+                href="https://www.youtube.com/watch?v=W31LlujrB08&list=RDMMW31LlujrB08&start_radio=1">Read here more</a>
+        </div>
+        <div class="forth-side">
+            <img src="images/rafi.jpg" alt="pics are here">
+        </div>
+    </section>
+
 </body>
 
 </html>
