--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 Peter
                 Diamandis, entrepreneur "Don't knock your competitors. By boosting others you will boost yourself. A
                 little competition is a good thing and severe competition is a blessing.</p>
-            <a class="link-button" target="_blank" href="www.google.com">Google a jow</a>
+            <a class="link-button" target="_blank"
+                href="https://www.youtube.com/watch?v=s5abpwVuhzM&list=RDdVU_IeeZ6XA&index=25">Click Here</a>
             <p><small>Wanna know more about web design? Click here</small></p>
         </div>
         <div class="first-width">
@@ -81,6 +82,26 @@
             <img src="images/rafi.jpg" alt="pics are here">
         </div>
     </section>
+    <section class="fifth-section">
+        <div class="fifth-first">
+            <h1>Web development area</h1>
+            <p>Web development refers to the creating, building, and maintaining of websites. It includes aspects such
+                as web design, web publishing, web programming, and database management. It is the creation of an
+                application that works over the internet i.e. websites.</p>
+            <a class="link-button" target="_blank"
+                href="https://www.youtube.com/watch?v=dVU_IeeZ6XA&list=RDdVU_IeeZ6XA&start_radio=1">About more..</a>
+        </div>
+        <div class="fifth-second">
+            <img src="images/rafi.jpg" alt="more picss">
+        </div>
+
+    </section>
+    <footer>
+        <div class="footer-area">
+            <h3>Mission 2024</h3>
+            <p>@all copyright by md Rafiqul islam</p>
+        </div>
+    </footer>
 
 </body>
 
